<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:background="@color/background_light">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/MemberTextView"
                    android:text="@string/first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_fname"
                    android:inputType="text"
                    style="@style/MemberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MemberTextView"
                    android:layout_weight="1"
                    android:text="@string/last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_lname"
                    android:inputType="text"
                    style="@style/MemberEditText"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/MemberTextView"
                    android:text="@string/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/MemberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/MemberTextView"
                    android:text="@string/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/MemberEditText"
                    android:inputType="textEmailAddress"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MemberTextView"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_pass"
                    android:inputType="textPassword"
                    style="@style/MemberEditText"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/member_btns"/>

    </RelativeLayout>

</RelativeLayout>